--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ tokio = { version = "1.48.0", features = ["rt-multi-thread", "tracing", "io-std"
 tokio-stream = "0.1.17"
 url = { version = "2.5.7", features = ["serde"] }
 tempfile = "3.23.0"
+regex = "1.12.2"
