--- a/config.toml
+++ b/config.toml
@@ -16,8 +16,6 @@ repository = "cargo-generate/cargo-generate"
 
 [[packages]]
 repository = "crate-ci/cargo-release"
-[packages.platforms]
-linux-64 = "-x86_64-unknown-linux-gnu.tar.gz$"
 
 [[packages]]
 repository = "davidlattimore/wild"
@@ -25,31 +23,17 @@ repository = "davidlattimore/wild"
 [[packages]]
 repository = "est31/cargo-udeps"
 
-# ### TODO: Rename binary to remove architecture + version
-# [[packages]]
-# repository = "idursun/jjui"
-# [packages.platforms]
-# linux-64 = "-linux-amd64\\.zip$"
-# linux-aarch64 = "-linux-arm64\\.zip$"
-# osx-64 = "-darwin-amd64\\.zip$"
-# osx-arm64 = "-darwin-arm64\\.zip$"
-# win-64 = "-windows-amd64\\.zip$"
-# win-arm64 = "-windows-arm64\\.zip$"
+[[packages]]
+repository = "idursun/jjui"
 
 [[packages]]
 repository = "ifd3f/caligula"
-[packages.platforms]
-linux-64 = "-x86_64-linux$"
-linux-aarch64 = "-aarch64-linux$"
 
 [[packages]]
 repository = "j178/prek"
 
 [[packages]]
 repository = "MathiasPius/crates-lsp"
-[packages.platforms]
-linux-64 = "-x86_64-unknown-linux-gnu.tar.gz$"
-linux-aarch64 = "-aarch64-unknown-linux-gnu.tar.gz$"
 
 [[packages]]
 repository = "obi1kenobi/cargo-semver-checks"
@@ -57,24 +41,15 @@ repository = "obi1kenobi/cargo-semver-checks"
 [[packages]]
 repository = "probe-rs/probe-rs"
 name = "probe-rs-tools"
-[packages.platforms]
-linux-aarch64 = "^probe-rs-tools-aarch64-unknown-linux-gnu\\.tar\\.xz$"
-linux-64 = "^probe-rs-tools-x86_64-unknown-linux-gnu\\.tar\\.xz$"
-osx-64 = "^probe-rs-tools+++"
-osx-arm64 = "^probe-rs-tools+++"
-win-64 = "^probe-rs-tools+++"
 
 [[packages]]
 repository = "rust-fuzz/cargo-fuzz"
 
-### TODO: 0.0.98 has tarballs + plain binaries
-# [[packages]]
-# repository = "rvben/rumdl"
+[[packages]]
+repository = "rvben/rumdl"
 
 [[packages]]
 repository = "xd009642/tarpaulin"
 
 [[packages]]
 repository = "Michael-F-Bryan/mdbook-linkcheck"
-[packages.platforms]
-linux-64 = "x86_64-unknown-linux-gnu.zip$"
