GH: Always upload and package that was completed

--- a/.github/workflows/octoconda.yaml
+++ b/.github/workflows/octoconda.yaml
@@ -65,6 +65,7 @@ jobs:
             )
 
       - name: Upload packages
+        if: always()
         run: |
           chmod +x "${GITHUB_WORKSPACE}/scripts/upload_all.sh" \
             && (\
