octoconda: Improve version parsing to ignore package names
... and to also extract build numbers.

Add oxfmt and oxlint to make use of the new code

--- a/config.toml
+++ b/config.toml
@@ -103,6 +103,13 @@ repository = "neovim/neovim"
 repository = "obi1kenobi/cargo-semver-checks"
 
 [[packages]]
+repository = "oxc-project/oxc"
+name = "oxfmt"
+[[packages]]
+repository = "oxc-project/oxc"
+name = "oxlint"
+
+[[packages]]
 repository = "probe-rs/probe-rs"
 name = "probe-rs-tools"
 
