Clean up about data and use extra
... with most of the reproducibility info moved
over into the extra section.

--- a/config.toml
+++ b/config.toml
@@ -114,6 +114,9 @@ repository = "probe-rs/probe-rs"
 name = "probe-rs-tools"
 
 [[packages]]
+repository = "runlevel5/htop-rs"
+
+[[packages]]
 repository = "rgwood/systemctl-tui"
 
 [[packages]]
